fix: Popup close button z-index

--- a/src/components/Popup/Popup.module.scss
+++ b/src/components/Popup/Popup.module.scss
@@ -121,7 +121,7 @@
   transform: scale(0.6) rotate(35deg);
   transition: 0.35s;
   width: u.rem-calc(60);
-  z-index: 2;
+  z-index: 6;
 
   @include bp.down(md) {
     position: static;
